static/styles.css
/* Smooth scrolling */
html {
    font-size: 110%;
    scroll-behavior: smooth;
}

body {
    font-family: 'Playfair Display', serif;
    font-optical-sizing: auto;
    font-weight: <weight>;
    font-style: normal;
    margin: 2;
    padding: 2;
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
    background-color: #220007;
    color: #FFFFFF;
}

.container {
    display: flex;
    flex-direction: row;
    width: 80%;
    max-width: 1200px;
    background-color: #220007;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    margin-bottom: 40px;
    border-radius: 10px;
    padding-top: 100px;
}

.question-container {
    display: flex;
    justify-content: space-between;
    width: 50%;
    padding: 20px;
}

.message-container {
    display: flex;
    justify-content: space-between;
    width: 70%;
    padding: 20px;
}

.compatibility-astro-container {
    display: flex;
    justify-content: space-between;
    width: 50%;
    padding: 10px;
}

.fixed-right-corner {
    position: absolute;
    top: -5px;
    right: 15px;
    text-align: right;
    color: #FFFFFF;
}

.left-panel, .right-panel {
    padding: 10px;
    display: flex;
    flex-direction: column;
}

.left-panel {
    width: 40%;
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 20px;
    padding-left: 100px;
    padding-right: 20px;
}

.right-panel {
    width: 50%;
    margin-top: 20px;
}

.left-question-panel, .right-question-panel {
    padding: 10px;
    display: flex;
    flex-direction: column;
    width: 100%;
}

.left-question-panel {
    display: flex;
    flex-direction: column;
    justify-content: center; /* Center content vertically */
    align-items: center; /* Center content horizontally */
}

.right-question-panel {
    margin-top: 35px;
}

.left-message-panel, .right-message-panel {
    padding: 10px;
    display: flex;
    flex-direction: column;
}

.left-message-panel {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.right-message-panel {
    width: 50%;
    margin-top: 35px;
}


.left-compatibility-astro-panel, .right-compatibility-astro-panel {
    padding: 10px;
    display: flex;
    flex-direction: column;
    width: 100%;
}

.left-compatibility-astro-panel {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}



#your-questions {
    background-image: url('../static/questions_background.png');
    background-size: cover; /* Make the image cover the section */
    background-repeat: no-repeat;
    background-position: center;
    padding: 20px;
    border-radius: 10px;
    width: 100%;
    height: auto;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


#your-questions .header h1 {
    color: #FFFFFF;
},

#your-questions .gold-header {
    padding: 0;
    border-radius: 0;
    background-color: transparent;
}


.compatibility-astro-background {
    background-image: url('../static/brook_pink_background.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    padding: 20px;
    border-radius: 10px;
    width: 100%;
    height: auto;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


.compatibility-astro-background .header h1 {
    color: #FFFFFF;
},
.compatibility-astro-background .gold-header {
    padding: 0;
    border-radius: 0;
    background-color: transparent;
}

.compatibility-astro-text-background {
    background-image: url('../static/compatibility_astro_background.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    padding: 5px;
    border-radius: 10px;
    width: 100%;
    height: auto;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.ordinary-panel {
    width: 90%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 70px;
}

#conclusion {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin: 0 auto;
}

.conclusion-panel {
    width: 60%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 100px;
    margin-bottom: 20px;
    text-align: center;
}

.conclusion-background {
    background-image: url('../static/conclusion_background.png');
    background-repeat: no-repeat;
    background-position: center;
    border-radius: 25px;
    background-size: cover;
    padding: 30px;
    padding-top: 30px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.conclusion-panel .instructions p {
    margin-top: 50px;
    margin-bottom: 50px;
    font-size: 1.3rem;
}
.conclusion-panel .instructions h1 {
    font-size: 1.7rem;
}

.conclusion-background {
    background-image: url('../static/conclusion_background.png');
    background-repeat: no-repeat;
    background-position: center;
    border-radius: 25px;
    background-size: cover;
}

.the-end {
    font-family: "Edu AU VIC WA NT Hand", cursive;
    font-optical-sizing: auto;
    font-weight: <weight>;
    font-style: normal;
}

.important-panel {
    width: 92%;
    max-width: 800px;
    background-color: #220007;
    color: #FFFFFF;
    border-radius: 10px;
    padding: 20px;
    margin: 20px auto;
    margin-top: 70px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    text-align: center;
}
/* ... */

